# python-project-52

./: Makefile  README.md  db.sqlite3  pyproject.toml
task_manager/: settings.py  urls.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/templates/: index.html
task_manager/templates/components/: header.html
task_manager/templates/layouts/: layout.html
task_manager/templates/users/: index.html
task_manager/users/: urls.py  views.py
